# eu-energy-imports-pipeline-cloud

./: .env  .gitignore  .terraform.lock.hcl  main.py  pyproject.toml
infrastructure/: main.tf  variables.tf
ingestion/: run_ingestion.py
ingestion/comext/extract/: download_gas_data.py  download_oil_data.py
ingestion/comext/upload/: upload_data_to_gcp.py  upload_gas_data_to_gcp.py  upload_oil_data_to_gcp.py
ingestion/eurostat/extract/: download_gas_data.py  download_oil_data.py
ingestion/eurostat/upload/: __init__.py  upload_data_to_gcp.py  upload_dimensions_data_to_gcp.py
transformation/eu-energy-imports-pipeline/: workflow_settings.yaml
transformation/eu-energy-imports-pipeline/definitions/sources/: create_comext_gas_imports_dataset.sqlx  create_comext_oil_imports_dataset.sqlx
transformation/eu-energy-imports-pipeline/definitions/staging/: stg_gas_imports_quantity.sqlx  stg_gas_imports_value.sqlx  stg_oil_imports_quantity.sqlx  stg_oil_imports_value.sqlx
